# wasm-snake

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  snake.rs  world.rs
www/: bootstrap.js  index.html  index.js  index.ts  package-lock.json  package.json  sum.wasm  tsconfig.json  webpack.config.js
www/public/: sum.wasm  sum.wat
