[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.86"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"] # primarily designed to build shared libraries (especially for different languages)
